#


[bdist_zapp]
entry_point = deptree.cli:main


[check]
metadata = 1
strict = 1


[metadata]
license_files =
    LICENSE.txt
# `name` is necessary for `bdist_zapp`
name = deptree
url = https://pypi.org/project/deptree/


[options]
package_dir =
    = src
packages = find:


[options.packages.find]
where = src


# EOF
