#


[bdist_zapp]
entry_point = deptree.cli:main


[metadata]
license_files =
    LICENSE.txt
# `name` is necessary for `bdist_zapp`
name = deptree
url = https://pypi.org/project/deptree/


[options]
include_package_data = True
package_dir =
    = src
packages = find:


[options.packages.find]
where = src


# EOF
